# nn_mnist

./: .gitmodules  CMakeLists.txt  README.md  main.cc  network.cc  network.h  settings.h  utils.cc  utils.h
include/nn_mnist/: network.h
include/utils/: utils.h
src/demo/: main.cc  settings.h  utils.cc
src/digit_recognition/: main.cc  utils.cc  utils.h
src/digit_recognition_example/: main.cc
src/nn_mnist/: network.cc
src/show_mnist_image/: main.cc
src/trainer/: main.cc  settings.h
src/utils/: utils.cc
src/wasm/: build.sh  index.html  main.cc  wasm_nn_mnist.js  wasm_nn_mnist.wasm
